--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = '2018'
 [dependencies]
 time = "^0.1.40"
 rand = "0.8.4"
+num = "0.4.0"
+
+#[dependencies.rust_road_router]
+#path = "../rust_road_router/engine"
